Fix wrong size of avatar on small screens, fix feedback form on mobile

--- a/src/css/module/contributors.scss
+++ b/src/css/module/contributors.scss
@@ -13,6 +13,7 @@
 
   a {
     margin-left: .35rem;
+    width: 20px;
   }
 
   p {
